@@ -3,6 +3,7 @@ Release 1.3.1 (tbd)
 FIXED   security issue: contents of the config directory were viewable. Added .htaccess file to prevent users from accessing .ini files etc.
 FIXED   compatibility problems with Internet Explorer 8 (and earlier)
 FIXED   compatibility issue with some Icinga versions: generating the config would fail if advanced-services were not assigned to either a host or hostgroup.
+FIXED   issue when importing items that are linked to other items which contain special characters in their names (e.g. service 'C:\ Drive')
 
 ADDED   icon preview to the OS details page
 
